--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 		
-			<h1><center>Website</center></h1>
+			<h1><center>My Website</center></h1>
 
 
 		
@@ -27,35 +27,7 @@
 <div class="navbar">
 	<a href="index.html">Home</a>
 
-	<div class="dropdown">
-	</div>
-
-	<a href=""></a>
-
-	<div class="dropdown">
-	</div>
-	
-	
-
-	<div class="dropdown">
-
-		<button class="dropbtn">More Info
-		<i class="fa fa-caret-down"></i>
-		</button>
-		<div class="dropdown-content">
-			<a href="">More Info</a>
-	
-		</div>
-	</div>
-
-
-
-	<a href="">Documents</a>
-
-	<div class="dropdown">
-	</div>
-
-
+	<a href="Documents.html">Documents</a>
 
 	<div class="dropdown">
 
@@ -82,75 +54,52 @@
 	</div>
 
 
-
-
-
 </div> 
 
-
-
-
-
-
 <body>
-	
 
-	<br>
-<div class="col-2 menu">
- 	<ul>
-	<li> <button class="button" onclick="toggleMe()">Click Me for The Latest News</button></li> 
-		<p id="tes" style="display: none;">More Info</p> <br><br>
-	
-	</ul>
- </div>
-<div class= "col-10"> <ul>
+<!--<div class= "col-1"> <ul>
 <li> <img src= "https://webstockreview.net/images/kawaii-clipart-spider-1.png" id="p1"> </li></ul>
-</div>
+</div>-->
 
 	
 	<div class="a">
-<br><br><br><br><br>
-		<h1> Some Text goes here </h1> 
-		<span>Some text goes here</span>
+<br>
+		<h1> Hello, My name is Selina! </h1> 
+		<h5> <p>I am currently a 3rd year Ethical Hacking student @ Abertay University</p> </h5> <br>
 
-
-
-
-		<span> Lorem ipsum dolor sit amet, <br>
-		consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore <br>
+		<p> Lorem ipsum dolor sit amet,
+		consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
 		et dolore magna aliqua. Ut enim ad minim veniam, 
-		quis nostrud exercitation ullamco laboris nisi ut aliquip <br>
+		quis nostrud exercitation ullamco laboris nisi ut aliquip
 		ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-		in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br>
+		in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-		officia deserunt mollit anim id est laborum.</span>
+		officia deserunt mollit anim id est laborum.</p>
  
 		<br>
-		<br>
-		<br>
-		<br>
-		<br>
 
-		<span> Scelerisque purus semper eget duis at tellus at urna.<br>
+		<h2>A little about me </h2>
+
+		<p> Scelerisque purus semper eget duis at tellus at urna.
 		Convallis posuere morbi leo urna molestie at. Arcu risus quis 
-		varius quam. Faucibus turpis in eu mi bibendum neque. Cursus <br>
+		varius quam. Faucibus turpis in eu mi bibendum neque. Cursus
 		metus aliquam eleifend mi in. Aenean et tortor at risus viverra. 
-		Sit amet dictum sit amet justo. Ac turpis egestas maecenas pharetra <br>
+		Sit amet dictum sit amet justo. Ac turpis egestas maecenas pharetra
 		convallis posuere. Nisi lacus sed viverra tellus in hac habitasse. 
-		Justo laoreet sit amet cursus sit amet dictum sit. Ac ut consequat <br>
+		Justo laoreet sit amet cursus sit amet dictum sit. Ac ut consequat
 		semper viverra nam libero justo laoreet sit. Morbi tristique senectus 
-		et netus et malesuada fames ac turpis. Mauris commodo quis imperdiet massa <br>
+		et netus et malesuada fames ac turpis. Mauris commodo quis imperdiet massa
 		tincidunt nunc. Euismod quis viverra nibh cras pulvinar mattis. Quam nulla
-		porttitor massa id. Mi ipsum faucibus vitae aliquet nec ullamcorper.<br>
+		porttitor massa id. Mi ipsum faucibus vitae aliquet nec ullamcorper.
 		Tincidunt tortor aliquam nulla facilisi cras. Vitae justo eget magna 
-		fermentum iaculis eu non diam phasellus. Dui accumsan sit amet nulla <br>
+		fermentum iaculis eu non diam phasellus. Dui accumsan sit amet nulla
 		facilisi morbi. Vitae semper quis lectus nulla at volutpat diam.
-
-		</span>
+		</p>
 	</div>
 <!--</div>-->
-<link rel="stylesheet" href="style.css">
 
+<link rel="stylesheet" href="style.css">
 </link>
 </body>
 </html>
