--- a/index.html
+++ b/index.html
@@ -26,21 +26,31 @@
 
 <div class="navbar">
 	<a href="index.html">Home</a>
-
-	<a href="Documents.html">Documents</a>
-
 	<div class="dropdown">
-
-		<button class="dropbtn">Code
+		<button class="dropbtn">Documents
 		<i class="fa fa-caret-down"></i>
 		</button>
 
 		<div class="dropdown-content">
-			<a href="">Code</a>
-
-	
+			<a href="Documents.html">Documents</a>
+			<a href="Documents.html">Document 2</a>
+			<a href="Documents.html">Year 2 Ethical Hacking Report</a>
+			<a href="Documents.html">Year 3 Ethical Hacking Report</a>
+			<a href="Documents.html">Year 3 Project Development Design & Planning</a>
+			<a href="Documents.html">Year 3 Project Development Design & Planning</a>
+			<a href="Documents.html">Year 3 Project Development Design & Planning</a>
 		</div>
 	</div>
+<!--	<div class="dropdown"> -->
+
+	<!--	<button class="dropbtn">Code
+		<i class="fa fa-caret-down"></i>
+		</button>
+
+		<div class="dropdown-content"> -->
+			<a href="">Code</a>
+		<!-- </div> -->
+<!--	</div> -->
 
 	<div class="dropdown">
 		<button class="dropbtn">Extras
@@ -58,12 +68,12 @@
 
 <body>
 
-<!--<div class= "col-1"> <ul>
-<li> <img src= "https://webstockreview.net/images/kawaii-clipart-spider-1.png" id="p1"> </li></ul>
-</div>-->
-
+<div class= "col-2"> <ul>
+<li> <!-- <img src= "https://webstockreview.net/images/kawaii-clipart-spider-1.png" id="p1"> --> </li></ul>
+</div>
+ <br>
 	
-	<div class="a">
+	<div class="col-8">
 <br>
 		<h1> Hello, My name is Selina! </h1> 
 		<h5> <p>I am currently a 3rd year Ethical Hacking student @ Abertay University</p> </h5> <br>
