--- a/Documents.html
+++ b/Documents.html
@@ -34,8 +34,6 @@
 
 		<div class="dropdown-content">
 			<a href="">Code</a>
-
-	
 		</div>
 	</div>
 
@@ -55,18 +53,18 @@
 
 <body>
 
-<!--<div class= "col-1"> <ul>
+<div class= "col-2"> <ul>
 <li> <img src= "https://webstockreview.net/images/kawaii-clipart-spider-1.png" id="p1"> </li></ul>
-</div>-->
+</div>
 
 	
-	<div class="a">
+	<div class="col-8">
 <br>
 		<h1> Hello, My name is Selina! </h1> 
 		<h5> <p>I am currently a 3rd year Ethical Hacking student @ Abertay University</p> </h5> <br>
 
 		<p> I am a Document</p>
- 
+ 		<iframe width="640" height ="480" src="Final Submission.pdf"> </iframe>
 		<br>
 
 		<h2>A little about me </h2>
