Updating the website

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 		
-			<h1><center>My Website</center></h1>
-
+			<h1><center><br />My Website</center></h1>
+			<br />
 			<title>My web</title>			
 		</head>
 
@@ -23,7 +23,7 @@
 		</button>
 
 		<div class="dropdown-content">
-			<a href="Documents.html">Documents</a>
+			<a href="Documents.html">Year 1 Introduction to Security</a>
 			<a href="Documents.html">Document 2</a>
 			<a href="Documents.html">Year 2 Ethical Hacking Report</a>
 			<a href="Year 3 ethical hack.html">Year 3 Ethical Hacking Report</a>
@@ -57,45 +57,34 @@
 
 </div> 
 
-
-
-
-
-
-
-
-
-<%= yield %>
-<%= partial "navbar" %>
-
 <body>
-
+<br /><br /><br />
 <div class= "col-2"> <!-- <ul>
 <li> <img src= "https://webstockreview.net/images/kawaii-clipart-spider-1.png" id="p1">  </li></ul> -->
 </div>	
 	<div class="col-8">
-
+		<div class = "boxAttempt">
 		<h1> Hello, My name is Selina! </h1> 
 		<h5> <p>I am currently a 3rd year Ethical Hacking student @ Abertay University</p> </h5> <br>
 
 		<p> I am currently a student at Abertay Univerity studying BSc Ethical Hacking degree. I currently live in London looking to gain experience in real world work as an ethical hacker.<br> 
 		Some of the languages that I have worked in are; C++, Python, HTML/JavaScript/CSS, and PHP. While I am currently learning Assembly. <br>
 		</p> 
-		<br>
-		<p>Lorem ipsum dolor sit amet,
+		<br /><br /><br /><br /><br /><br /><br /><br />
+		Lorem ipsum dolor sit amet,
 		consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
 		et dolore magna aliqua. Ut enim ad minim veniam, 
 		quis nostrud exercitation ullamco laboris nisi ut aliquip
 		ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
 		in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-		officia deserunt mollit anim id est laborum.</p>
+		officia deserunt mollit anim id est laborum.
  
-		<br>
+		<br /><br /><br /><br />
 
 		<h2>A little about me </h2>
 
-		<p> Scelerisque purus semper eget duis at tellus at urna.
+		Scelerisque purus semper eget duis at tellus at urna.
 		Convallis posuere morbi leo urna molestie at. Arcu risus quis 
 		varius quam. Faucibus turpis in eu mi bibendum neque. Cursus
 		metus aliquam eleifend mi in. Aenean et tortor at risus viverra. 
@@ -109,10 +98,25 @@
 		Tincidunt tortor aliquam nulla facilisi cras. Vitae justo eget magna 
 		fermentum iaculis eu non diam phasellus. Dui accumsan sit amet nulla
 		facilisi morbi. Vitae semper quis lectus nulla at volutpat diam.
-		</p>
+		Scelerisque purus semper eget duis at tellus at urna.
+		Convallis posuere morbi leo urna molestie at. Arcu risus quis 
+		varius quam. Faucibus turpis in eu mi bibendum neque. Cursus
+		metus aliquam eleifend mi in. Aenean et tortor at risus viverra. 
+		Sit amet dictum sit amet justo. Ac turpis egestas maecenas pharetra
+		convallis posuere. Nisi lacus sed viverra tellus in hac habitasse. 
+		Justo laoreet sit amet cursus sit amet dictum sit. Ac ut consequat
+		semper viverra nam libero justo laoreet sit. Morbi tristique senectus 
+		et netus et malesuada fames ac turpis. Mauris commodo quis imperdiet massa
+		tincidunt nunc. Euismod quis viverra nibh cras pulvinar mattis. Quam nulla
+		porttitor massa id. Mi ipsum faucibus vitae aliquet nec ullamcorper.
+		Tincidunt tortor aliquam nulla facilisi cras. Vitae justo eget magna 
+		fermentum iaculis eu non diam phasellus. Dui accumsan sit amet nulla
+		facilisi morbi. Vitae semper quis lectus nulla at volutpat diam.
+		</div>
+		<br /><br /><br /><br /><br />
 	</div>
 <!--</div>-->
-
+<!-- I will be a footer -->
 <link rel="stylesheet" href="style.css">
 </link>
 </body>
