--- a/Documents.html
+++ b/Documents.html
@@ -1,29 +1,14 @@
+--- layout: front2 ---
 <!DOCTYPE html>
 <html lang="en">
 
-{% include head.html %}
-
-<body id="page-top">
-  {% include nav.html %}
-  {% include header.html %}
-  {% include contact.html %}
-  {% include scripts.html %}
-</body>
-
-</html>
-
 <body>
-
-<div class= "col-2"> <ul>
-<li> <img src= "https://webstockreview.net/images/kawaii-clipart-spider-1.png" id="p1"> </li></ul>
-</div>
-
 	
 	<div class="col-8">
 <br>
 
 		<p> I am a Document</p>
- 		<iframe width="640" height ="480" src="Final Submission.pdf"> </iframe>
+ 		<iframe width="640" height ="480" src="SQL Injection.pdf"> </iframe>
 		<br>
 
 	
@@ -32,8 +17,5 @@
 		</p>
 	</div>
 <!--</div>-->
-
-<link rel="stylesheet" href="style.css">
-</link>
 </body>
 </html>
