Attempting to solve document

--- a/Documents.html
+++ b/Documents.html
@@ -2,12 +2,8 @@
 layout: front2
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-
-<body>
 	
-	<div class="col-8">
+{{	<div class="col-8">
 <br>
 
 		<p> I am a Document</p>
@@ -18,7 +14,5 @@ layout: front2
 
 		<p> I am a 1st year document.
 		</p>
-	</div>
+	</div> }}
 <!--</div>-->
-</body>
-</html>
