--- a/Documents.html
+++ b/Documents.html
@@ -2,11 +2,10 @@
 layout: front2
 ---
 
-	
-{{	<div class="col-8">
+		<div class="col-8">
 <br>
 
-		<p> I am a Document</p>
+		<p> {{ I am a Document }}</p>
  		<iframe width="640" height ="480" src="SQL Injection.pdf"> </iframe>
 		<br>
 
