--- a/Documents.html
+++ b/Documents.html
@@ -6,12 +6,11 @@ layout: front2
 <br>
 
 		<p> {{ I am a Document }}</p>
- 		<iframe width="640" height ="480" src="SQL Injection.pdf"> </iframe>
+ 		<iframe width="640" height ="550" src="SQL Injection.pdf"> </iframe>
 		<br>
 
 	
 
-		<p> I am a 1st year document.
-		</p>
-	</div> }}
+		
+	</div>
 <!--</div>-->
