--- a/Documents.html
+++ b/Documents.html
@@ -5,9 +5,9 @@ layout: front2
 		<div class="col-8">
 <br>
 
-		<p> {{ I am a Document }}</p>
+		<center> <p> {{ I am a Document }}</p>
  		<iframe width="640" height ="550" src="SQL Injection.pdf"> </iframe>
-		<br>
+		</centre>
 
 	
 
