--- a/Documents.html
+++ b/Documents.html
@@ -1,7 +1,7 @@
 ---
 layout: front2
 ---
-{% if href == #year2 %}
+{% if page.url == https://selina-fahy.github.io/Documents.html#year2 %}
 		<div class="col-8">
 <br>
 
