testing if/else

--- a/Documents.html
+++ b/Documents.html
@@ -13,5 +13,7 @@ layout: front2
 
 		
 	</div>
+{% else %}
+this shows if neither of the above two if conditions are met.
 {% endif %}
 <!--</div>-->
