--- a/Year1documents.html
+++ b/Year1documents.html
@@ -5,7 +5,7 @@ layout: front2
 		<div class="col-8">
 <br>
 
-		<center> <p> {{ I am a Document }}</p>
+		<center> <p> Year 1 </p>
  		<iframe width="640" height ="650" src="SQL Injection.pdf"> </iframe>
 		</centre>
 
