--- a/Year3documents.html
+++ b/Year3documents.html
@@ -9,8 +9,8 @@ layout: frontForY3
 		<div class="col-8">
 <br>
 
-		<center> <p> Year 1 </p>
- 		<iframe width="640" height ="650" src="Year 3 Web App testing.pdf"> </iframe>
+		<center> <p> Year 3 Ethical Hacking Exploit Development </p>
+ 		<iframe width="640" height ="650" src="Exploit Development Tutorial.pdf"> </iframe>
 		</centre>
 
 	
@@ -28,7 +28,27 @@ layout: frontForY3
 		<div class="col-8">
 <br>
 
-		<center> <p> Year 1 </p>
+		<center> <p> Year 3 Malware Analysis</p>
+ 		<iframe width="640" height ="650" src="Malware Analysis.pdf"> </iframe>
+		</centre>
+
+	
+
+		
+	</div>
+
+</section>
+
+
+<section class="bg-primary" id="WebAppHacking">
+
+
+
+
+		<div class="col-8">
+<br>
+
+		<center> <p> Year 3 Web App Hacking </p>
  		<iframe width="640" height ="650" src="Year 3 Web App testing.pdf"> </iframe>
 		</centre>
 
@@ -36,5 +56,24 @@ layout: frontForY3
 
 		
 	</div>
+
+</section>
+
+<section class="bg-primary" id="MobileApplicationDevelopment">
+
+
+
+
+		<div class="col-8">
+<br>
+
+		<center> <p> Year 3 Mobile Application Development </p>
+ 		<iframe width="640" height ="650" src="Year 3 Web App testing.pdf"> </iframe>
+		</centre>
+
+	
+
+		
+		</div>
 
 </section>
