--- a/Year4documents.html
+++ b/Year4documents.html
@@ -9,7 +9,7 @@ layout: frontForY4
 		<div class="col-8">
 <br>
 
-		<center> <p> Year 3 Ethical Hacking Exploit Development </p>
+		<center> <p> Year 4 Mobile Forensics </p>
  		<iframe width="640" height ="650" src="Exploit Development Tutorial.pdf"> </iframe>
 		</centre>
 
@@ -20,7 +20,7 @@ layout: frontForY4
 
 </section>
 
-<section class="bg-primary" id="EthicalHackingMalwareAnalysis">
+<section class="bg-primary" id="SystemInternalsandCybersecurity">
 
 
 
@@ -28,7 +28,7 @@ layout: frontForY4
 		<div class="col-8">
 <br>
 
-		<center> <p> Year 3 Malware Analysis</p>
+		<center> <p> Year 4 System Internals and Cybersecurity</p>
  		<iframe width="640" height ="650" src="Malware Analysis.pdf"> </iframe>
 		</centre>
 
@@ -40,7 +40,7 @@ layout: frontForY4
 </section>
 
 
-<section class="bg-primary" id="WebAppHacking">
+<section class="bg-primary" id="ResilientSystems">
 
 
 
@@ -48,7 +48,7 @@ layout: frontForY4
 		<div class="col-8">
 <br>
 
-		<center> <p> Year 3 Web App Hacking </p>
+		<center> <p> Year 4 Resilient Systemsg </p>
  		<iframe width="640" height ="650" src="Year 3 Web App testing.pdf"> </iframe>
 		</centre>
 
@@ -59,7 +59,7 @@ layout: frontForY4
 
 </section>
 
-<section class="bg-primary" id="MobileApplicationDevelopment">
+<section class="bg-primary" id="Dissertation">
 
 
 
@@ -67,7 +67,7 @@ layout: frontForY4
 		<div class="col-8">
 <br>
 
-		<center> <p> Year 3 Mobile Application Development </p>
+		<center> <p> Year 4 Dissertation </p>
  		<iframe width="640" height ="650" src="Year 3 Web App testing.pdf"> </iframe>
 		</centre>
 
