--- a/Year4documents.html
+++ b/Year4documents.html
@@ -69,7 +69,7 @@ layout: frontForY4
 
 		<center> <p> Year 4 Dissertation Proposal</p>
  		<iframe width="640" height ="650" src="Year4DissProposal.pdf"> </iframe>
-		</centre>
+		</center>
 
 	
 
@@ -77,4 +77,6 @@ layout: frontForY4
 		</div>
 
 </section>
-<p> To be added soon. </p>
+<center>
+<p><b> To be added soon. </b></p>
+</center>
